<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/girlimageview"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/departure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/space2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space2"
            android:layout_width="5dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/girlimageview"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/eyeimage_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/space2"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tvCategoryNameDate"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/time_and_platform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/arrival_name"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/space2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryNameDate" />

        <ImageView
            android:id="@+id/comments_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/space2"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/image1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            android:text="@string/time_and_platform"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvcommentsnumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/tvcommentsnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/_10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvarrival2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="44dp"
            android:text="@string/arrival1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/girlimageview"
            android:layout_marginStart="16dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>